# copom-rag-api

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  pyproject.toml
prompts/: answer_generation.yaml  reranking.yaml
src/copom_rag/api/: main.py  models.py
src/copom_rag/config/: settings.py
src/copom_rag/core/: rag_service.py
src/copom_rag/prompts/: loader.py  templates.py
src/copom_rag/providers/: base.py  factory.py  gemini.py
src/copom_rag/retrieval/: postgres_retriever.py
src/copom_rag/utils/: logging_config.py
